--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,44 @@
+/*Обнуление*/
+*{
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*--------------------*/
+
+
+
 @font-face {
   font-family: 'Helvetica';
   src: url();
@@ -15,12 +56,16 @@ body {
   padding: 40px;
 }
 
+
+/* Navbar */
+
 .logo img{
   width: 76px;
 }
 
 .navbar {
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   display: flex;
   max-width: 1260px;
   margin: 0 auto;
@@ -33,8 +78,44 @@ body {
 
 .menu ul {
   cursor: pointer;
+  margin-right: 53px;
+  white-space: nowrap;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu ul:hover {
-  color: red;
+  border-bottom: 3px solid #FFFFFF;
 }
+
+.menu-active {
+  border-bottom: 3px solid #FFFFFF;
+}
+
+.burger-menu {
+  display: none;
+}
+
+.burger-menu__btn img{
+  width: 25px;
+}
+
+
+/* Navbar adaptive */
+
+
+@media screen and (max-device-width: 1140px){
+  .menu{
+    display: none;
+  }
+
+  .burger-menu {
+    display: block;
+  }
+  
+}
+
+/* Slider */
+
