--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,7 +68,7 @@ body {
   align-items: center;
   display: flex;
   max-width: 1260px;
-  margin: 0 auto;
+  margin: 0 auto 70px auto;
 }
 
 .menu {
@@ -117,5 +117,49 @@ body {
   
 }
 
-/* Slider */
+/* Slider */c
 
+
+/* News */
+
+.news-block {
+  margin: 0 auto;
+  min-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.news__title {
+  text-transform: uppercase;
+  position: relative;
+  left: 330px;
+  font-weight: 550;
+  font-size: 28px;
+  margin-bottom: 70px;  
+}
+
+.news__card {
+  width: 615px;
+  height: 345px;
+  border-radius: 40px;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-end;
+  padding: 45px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+
+.news-title {
+  font-weight: 550;
+  font-size: 30px;
+}
+
+.news-hashtag {
+  font-weight: 300;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
