--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,7 @@
 :focus,:active{outline: none;}
 a:focus,a:active{outline: none;}
 
+
 nav,footer,header,aside{display: block;}
 
 html,body{
@@ -35,6 +36,7 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+a {color: white}
 /*--------------------*/
 
 
@@ -118,4 +120,76 @@ body {
 }
 
 /* Slider */
+
+
+/* Footer */
+.footer {
+  align-items: flex-start;
+  display: flex;
+  max-width: 1260px;
+  margin: 0 auto;
+}
+
+.footer-list {
+  display: inline-block;
+  margin-right: 75px;
+}
+
+.footer-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.logo-footer {
+  width: 105px;
+  height: 105px;
+  padding-top: 50px;
+  margin-right: 45px;
+}
+
+.footer-heading {
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 15px;
+}
+
+.footer-item {
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+
+.footer-contacts {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  margin-top: 10px;
+}
+
+.footer-contacts-item {
+  margin-right: 40px;
+  font-size: 15px;
+}
+
+.footer-copyright {
+  margin-top: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.footer-copyright p {
+  color: #888888;
+}
+
+/* Footer Adaptive  */
+
+@media screen and (max-device-width: 1025px) {
+  .footer {
+    display: none;
+  }
+  .footer-copyright {
+    display: none;
+  }
+}
 
