--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -591,3 +591,61 @@ body {
 
 
 
+/* Projects */
+.projects-content{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.projects-card{
+  
+  display: flex;
+  margin-bottom: 150px;
+  flex-wrap: wrap;
+}
+
+.projects-thumb {
+  max-width: 715px;
+  min-width: 400px;
+  min-height: 445px;
+  border-radius: 30px;
+  margin-right: 100px;
+  flex-grow: 1;
+}
+
+.projects-text {
+  display: flex;
+  height: auto;
+  flex-direction: column;
+  justify-content: center;
+  
+}
+
+.projects-title {
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 550;
+  font-size: 40px;
+  margin-bottom: 50px;
+}
+
+.projects-description {
+  font-weight: 200;
+  font-size: 20px;
+  line-height: 20px;
+  width: 430px;
+  margin-bottom: 50px;
+}
+
+.projects-btn {
+  cursor: pointer;
+  height: 40px;
+  width: 150px;
+  border-radius: 25px;
+  border: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+}
