--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -866,3 +866,21 @@ body {
   display: flex;
   justify-content: center;
 }
+
+.logout-button{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  
+  margin-bottom: 50px;
+  
+}
+
+.logout-button button {
+  width: 150px;
+  background: #CB0A00;
+  border-radius: 50px;
+  height: 100px;
+  font-size: 20px;
+  color: white;
+}
