--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -885,3 +885,203 @@ body {
   color: white;
 }
 
+/* Partners */
+/* PartnersFirstText */
+
+.PartnersMainText{
+  margin-left: 100px;
+}
+
+.PartnersMainText p{
+  line-height: 75px;
+  text-align:left;
+  margin-bottom: 30px;
+  font-size: 60px;
+  font-family: 'Helvetica';
+  font-weight:normal;
+}
+
+.PartnersMainText span{
+
+  text-align: left;
+  margin-bottom: 100px;
+  font-size: 40px;
+  line-height: 50px;
+  font-family: 'Helvetica';
+  font-weight:lighter;
+}
+
+/* PartnersSecondText */
+
+.PartnersText{
+  margin-bottom: 55px;
+  margin-top: 200px;
+  margin-left: 100px;
+  font-family: 'Helvetica';
+  font-size:40px;
+  font-weight: 550;
+}
+
+/* partnersCarousel */
+.Discount{
+  overflow: hidden;
+}
+.Shadow-r{
+  position: absolute;
+  width: 90px;
+  height: 900px;
+  box-shadow: inset 50px 0px 100px black;
+  z-index: 3;
+}
+.Shadow-l{
+  right: 40px;
+  position: absolute;
+  width: 90px;
+  height: 900px;
+  box-shadow: inset -50px 0px 100px black;
+  z-index: 3;
+
+}
+.PartnersDiscount{
+  width: max-content;
+  display: flex;
+  position: relative;
+  left: -790px;
+
+}
+.DiscountImage{
+  width: 800px;
+  margin-top: 80px;
+  margin-right: 75px;
+  margin-left: 75px;
+  overflow: hidden;
+}
+/* PartnersCard */
+/*   */
+.PartnerCard{
+  margin-left: 170px;
+}
+.partners_card{
+  display: inline;
+  color: #000;
+}
+.partners_card img{
+  vertical-align:middle;
+  margin: 40px 0px 0px 0px;
+  /* padding-top: 50px;
+  padding-bottom: 50px;
+  margin-left: 30px; */
+  width: 100px;
+  transition:ease-in-out 0.7s;
+
+}
+.partners_card span{
+  display: none;
+}
+
+.partners_card:hover img{
+  width: 120px;
+  transition:ease-in-out 0.7s;
+}
+.partners_card:hover span{
+  margin-left: 10px;
+  padding-top: 10px;
+  padding-left: 10px;
+  position:absolute;
+  display:inline-block;
+  background-color: white;
+  margin-top: 30px;
+  height: 250px;
+  width: 250px;
+  border-radius: 20px;
+  animation: partners_span1 0.7s ease alternate forwards;
+}
+/* анимация выплывающего текста */
+@keyframes partners_span1{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 250px;
+  }
+}
+
+
+/* ПАРТНЕРС РЕГИСТРЕЙШН */
+/* PartnersRegDesign */
+
+.PartnersLetterText{
+  margin-top: 200px;
+  margin-left: 250px;
+  font-family: 'Helvetica';
+  font-size:35px;
+  font-weight: 500;
+}
+.PartnersLetter{
+  position:relative;
+  margin: 80px auto;
+  width: 700px;
+  height: 300px;
+  border: 2px solid white; 
+  border-radius: 20px;
+}
+.PartnersLetter1,.PartnersLetter2,.PartnersLetter3,.PartnersLetter4,.PartnersLetter5,.PartnersLetter6,.PartnersLetter7{
+  transform:translate(-50%, 0%);
+  left: 50%;
+  position: absolute;
+}
+.PartnersLetter1{
+  width: 90%;
+}
+.PartnersLetter2{
+  width: 88%;
+}
+.PartnersLetter3{
+  width: 85%;
+}
+.PartnersLetter4{
+  width: 81%;
+}
+.PartnersLetter5{
+  width: 76%;
+}
+.PartnersLetter6{
+  width: 70%;
+}
+.PartnersLetter7{
+  width: 63%;
+}
+
+/* partners letter form */
+
+.PartnersLetter form{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.PartnersLetter input{
+  font-size:15px;
+  /* padding: 5px; */
+  margin: 15px 0px 20px 0;
+  color: #fff;
+  width: 100%;
+  border-bottom: 1px solid #fff;
+  background-color: #000;
+}
+.PartnersLetter label{
+  font-size: small;
+}
+/* Partners button */
+
+.PartnersButton{
+  height: 80px;
+  width: 300px;
+  position:relative;
+  transform:translate(-50%, 0%);
+  left: 50%;
+  margin: 0px auto 80px auto;
+  font-size: medium;
+  background-color: #000;
+  color: white;
+  border: 2px solid white; 
+  border-radius: 40px;
+}
