--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -902,13 +902,15 @@ body {
 }
 
 .PartnersMainText span{
-
+  display: block;
+  font-weight: 100;
   text-align: left;
   margin-bottom: 100px;
-  font-size: 40px;
-  line-height: 50px;
+  font-size: 20px;
+  line-height: 20px;
   font-family: 'Helvetica';
   font-weight:lighter;
+  max-width: 700px;
 }
 
 /* PartnersSecondText */
@@ -996,6 +998,7 @@ body {
   border-radius: 20px;
   animation: partners_span1 0.7s ease alternate forwards;
 }
+
 /* анимация выплывающего текста */
 @keyframes partners_span1{
   0%{
@@ -1012,21 +1015,35 @@ body {
 
 .PartnersLetterText{
   margin-top: 200px;
-  margin-left: 250px;
   font-family: 'Helvetica';
   font-size:35px;
   font-weight: 500;
+  width: 100%;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
 }
+
+.PartnersLetterText span{
+  display: inline-block;
+  line-height: 35px;
+}
+
 .PartnersLetter{
+  width: 63%;
   position:relative;
   margin: 80px auto;
-  width: 700px;
-  height: 300px;
+  padding: 25px;
+  max-width: 700px;
+  min-height: 350px;
   border: 2px solid white; 
   border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.PartnersLetter1,.PartnersLetter2,.PartnersLetter3,.PartnersLetter4,.PartnersLetter5,.PartnersLetter6,.PartnersLetter7{
-  transform:translate(-50%, 0%);
+.PartnersLetter1,.PartnersLetter2,.PartnersLetter3,.PartnersLetter4,.PartnersLetter5,.PartnersLetter6,.PartnersLetter7 {
+  transform: translate(-50%, 0%);
   left: 50%;
   position: absolute;
 }
@@ -1070,6 +1087,18 @@ body {
 .PartnersLetter label{
   font-size: small;
 }
+
+.partners-form {
+  width: 100%;
+
+}
+
+.partners-form input{
+  width: 100%;
+}
+
+
+
 /* Partners button */
 
 .PartnersButton{
