--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,7 +44,16 @@ a {color: white}
 
 @font-face {
   font-family: 'Helvetica';
-  src: url();
+  src: 
+    url("./media/fonts/Helvetica/helvetica_bold.otf") format('otf'),
+    url("./media/fonts/Helvetica/helvetica_boldoblique.otf") format('otf'),
+    url("./media/fonts/Helvetica/helvetica_cyr_boldoblique.ttf") format('ttf'),
+    url("./media/fonts/Helvetica/helvetica_cyr_oblique.ttf") format('ttf'),
+    url("./media/fonts/Helvetica/helvetica_light.otf") format('otf'),
+    url("./media/fonts/Helvetica/helvetica_lightoblique.otf") format('otf'),
+    url("./media/fonts/Helvetica/helvetica_oblique.otf") format('otf'),
+    url("./media/fonts/Helvetica/helvetica_regular.otf") format('otf')
+  ;
 }
 
 body {
@@ -434,8 +443,9 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   width: auto;
-  margin: 0 auto 120px auto
-  
+  margin: 0 auto 120px auto;
+  align-items: center;
+  justify-content: center;
 }
 
 .scroll-menu-header {
