--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -104,7 +104,7 @@ body {
 	color: #ffffff;
 	background: black;
 	/* overflow-x: hidden; */
-	padding: 40px;
+	/* padding: 40px; */
 }
 
 /* Navbar */
@@ -119,6 +119,7 @@ body {
 	display: flex;
 	max-width: 1260px;
 	margin: 0 auto 70px auto;
+	padding: 40px;
 }
 
 .menu {
